Typo: Update authorize-http-requests.adoc
There is no semicolon. So I added it.

--- a/docs/modules/ROOT/pages/servlet/authorization/authorize-http-requests.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/authorize-http-requests.adoc
@@ -258,7 +258,7 @@ void endpointWhenNotUserAuthorityThenForbidden() {
 @Test
 void anyWhenUnauthenticatedThenUnauthorized() {
     this.mvc.perform(get("/any"))
-        .andExpect(status().isUnauthorized())
+        .andExpect(status().isUnauthorized());
 }
 ----
 ======
@@ -387,7 +387,7 @@ void endpointWhenNotUserAuthorityThenForbidden() {
 @Test
 void anyWhenUnauthenticatedThenUnauthorized() {
     this.mvc.perform(get("/any"))
-        .andExpect(status().isUnauthorized())
+        .andExpect(status().isUnauthorized());
 }
 ----
 ======
