Typo: Update authorize-http-requests.adoc
There is no semicolon. I added it.

--- a/docs/modules/ROOT/pages/servlet/authorization/authorize-http-requests.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/authorize-http-requests.adoc
@@ -521,7 +521,7 @@ void getWhenNoReadAuthorityThenForbidden() {
 @Test
 void postWhenWriteAuthorityThenAuthorized() {
     this.mvc.perform(post("/any").with(csrf()))
-        .andExpect(status().isOk())
+        .andExpect(status().isOk());
 }
 
 @WithMockUser(authorities="read")
