--- a/docs/modules/ROOT/pages/servlet/integrations/observability.adoc
+++ b/docs/modules/ROOT/pages/servlet/integrations/observability.adoc
@@ -38,7 +38,7 @@ public class MyApplication {
 
 	@Bean
 	ObservationRegistryCustomizer<ObservationRegistry> addTextHandler() {
-		return (registry) -> registry.observationConfig().observationHandler(new ObservationTextHandler());
+		return (registry) -> registry.observationConfig().observationHandler(new ObservationTextPublisher());
 	}
 
 	public static void main(String[] args) {
@@ -67,7 +67,7 @@ class MyApplication {
 	@Bean
 	fun addTextHandler(): ObservationRegistryCustomizer<ObservationRegistry> {
 		return registry: ObservationRegistry -> registry.observationConfig()
-				.observationHandler(ObservationTextHandler());
+				.observationHandler(ObservationTextPublisher());
 	}
 
 	fun main(args: Array<String>) {
@@ -134,7 +134,7 @@ public class MyApplication {
 	@Bean
 	ObservationRegistry<ObservationRegistry> observationRegistry() {
 		ObservationRegistry registry = ObservationRegistry.create();
-		registry.observationConfig().observationHandler(new ObservationTextHandler());
+		registry.observationConfig().observationHandler(new ObservationTextPublisher());
 		return registry;
 	}
 
@@ -164,7 +164,7 @@ class MyApplication {
 	@Bean
 	fun observationRegistry(): ObservationRegistry<ObservationRegistry> {
 		ObservationRegistry registry = ObservationRegistry.create()
-		registry.observationConfig().observationHandler(ObservationTextHandler())
+		registry.observationConfig().observationHandler(ObservationTextPublisher())
 		return registry
 	}
 
